[package]
name = "realdebrid-client"
version = "1.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_with = "3.8.1"
percent-encoding = "2.3.1"
getset = "0.1.2"
